# OCTypes

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  .readthedocs.yaml  .readthedocs.yml  AbsoluteValueDiagnosis.txt  AdditionalParserTestSuggestions.txt  CHANGELOG.md  CMakeLists.txt  ComprehensiveFixReport.txt  Doxyfile  Doxyfile.bak  FixComplexFunctionsSuggestion.txt  FixUnaryMinusPrecedence.txt  FixedUnaryMinusPrecedencePatch.txt  ImplicitMultiplicationSolution.txt  IncludeGuardsFixSuggestions.txt  JSON_TYPED_REFACTOR_PLAN.md  Makefile  NestedFunctionEvalFix.txt  NestedFunctionParsingEvaluationFixReport.txt  NestedFunctionSuggestions.txt  OCComplexParser.output  README.md  RightAssociativeExponentiationDiagnosis.txt  RightAssociativeExponentiationPatch.txt  UnaryMinusExponentiationPrecedence.txt  WARNING_SUPPRESSIONS.md  compile_commands.json  debug_linux.sh  header_refactor.md  runTests  runTests.asan  runTests.debug  test_leak.c  tutorials-rewrite-rules.txt  update_notes.md
.github/workflows/: ci.yml  release.yml
.pre-commit-scripts/: format-and-stage.sh
OCTypes.xcodeproj/: project.pbxproj
docs/: Doxyfile  background.rst  conf.py  index.rst  requirements.txt
docs/_build/: .buildinfo.bak  background.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: custom.css
docs/api/: OCArray.rst  OCAutoreleasePool.rst  OCBoolean.rst  OCData.rst  OCDictionary.rst  OCFileUtilities.rst  OCIndexArray.rst  OCIndexPairSet.rst  OCIndexSet.rst  OCLibrary.rst  OCMath.rst  OCNumber.rst  OCSet.rst  OCString.rst  OCType.rst  OCTypes.rst
doxygen/html/: _o_c_array_8c.html  _o_c_array_8c.js  _o_c_array_8h.html  _o_c_array_8h.js  _o_c_array_8h_source.html  _o_c_autorelease_pool_8c.html  _o_c_autorelease_pool_8c.js  _o_c_autorelease_pool_8h.html  _o_c_autorelease_pool_8h.js  _o_c_autorelease_pool_8h_source.html  _o_c_boolean_8c.html  _o_c_boolean_8c.js  _o_c_boolean_8h.html  _o_c_boolean_8h.js  _o_c_boolean_8h_source.html  _o_c_complex_parser_8h.html  _o_c_complex_parser_8h.js  _o_c_complex_parser_8h_source.html  _o_c_data_8c.html  _o_c_data_8c.js  _o_c_data_8h.html  _o_c_data_8h.js  _o_c_data_8h_source.html  _o_c_dictionary_8c.html  _o_c_dictionary_8c.js  _o_c_dictionary_8h.html  _o_c_dictionary_8h.js  _o_c_dictionary_8h_source.html  _o_c_library_8h.html  _o_c_library_8h.js  _o_c_library_8h_source.html  _o_c_math_8c.html  _o_c_math_8c.js  _o_c_math_8h.html  _o_c_math_8h.js  _o_c_math_8h_source.html  _o_c_number_8c.html  _o_c_number_8c.js  _o_c_number_8h.html  _o_c_number_8h.js  (+138 more)
doxygen/xml/: Doxyfile.xml  _o_c_array_8c.xml  _o_c_array_8h.xml  _o_c_autorelease_pool_8c.xml  _o_c_autorelease_pool_8h.xml  _o_c_boolean_8c.xml  _o_c_boolean_8h.xml  _o_c_complex_parser_8h.xml  _o_c_data_8c.xml  _o_c_data_8h.xml  _o_c_dictionary_8c.xml  _o_c_dictionary_8h.xml  _o_c_library_8h.xml  _o_c_math_8c.xml  _o_c_math_8h.xml  _o_c_number_8c.xml  _o_c_number_8h.xml  _o_c_string_8c.xml  _o_c_string_8h.xml  _o_c_type_8c.xml  _o_c_type_8h.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  group___o_c_array.xml  group___o_c_autorelease_pool.xml  group___o_c_boolean.xml  group___o_c_data.xml  group___o_c_dictionary.xml  group___o_c_library.xml  group___o_c_math.xml  group___o_c_number.xml  group___o_c_string.xml  group___o_c_type.xml  index.xml  struct_____o_c_array.xml  struct_____o_c_base.xml  struct_____o_c_boolean.xml  struct_____o_c_data.xml  (+16 more)
src/: Makefile  OCArray.c  OCArray.h  OCAutoreleasePool.c  OCAutoreleasePool.h  OCBoolean.c  OCBoolean.h  OCComplexParser.tab.h  OCComplexParser.y  OCComplexScanner.l  OCData.c  OCData.h  OCDictionary.c  OCDictionary.h  OCFileUtilities.c  OCFileUtilities.h  OCFileUtils.c  OCFileUtils.h  OCIndexArray.c  OCIndexArray.h  OCIndexPairSet.c  OCIndexPairSet.h  OCIndexSet.c  OCIndexSet.h  OCLeakTracker.c  OCLeakTracker.h  OCLibrary.c  OCLibrary.h  OCMath.c  OCMath.h  OCNull.c  OCNull.h  OCNumber.c  OCNumber.h  OCSet.c  OCSet.h  OCString.c  OCString.h  OCType.c  OCType.h  (+4 more)
tests/: main.c  test_array.c  test_array.h  test_autoreleasepool.c  test_autoreleasepool.h  test_boolean.c  test_boolean.h  test_complex_parser.c  test_complex_parser.h  test_data.c  test_data.h  test_dictionary.c  test_dictionary.h  test_fileutils.c  test_fileutils.h  test_indexarray.c  test_indexarray.h  test_indexpairset.c  test_indexpairset.h  test_indexset.c  test_indexset.h  test_json_typed.c  test_json_typed.h  test_math.c  test_math.h  test_null.c  test_null.h  test_number.c  test_number.h  test_ocindexarray.c  test_ocindexarray.h  test_string.c  test_string.h  test_type.c  test_type.h  test_utils.h
(+165 files in other folders)
